--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,112 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*,
+::after,
+::before {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+:root {
+  --dark:#dae8f2;
+  --light:#e6edf2;
+  --heading: rgb(0, 164, 244);
+  --margin: 0 10%;
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+  font-size: 100%;
+  width: 100%;
+  overflow-x: hidden;
+  position: absolute;
+  
+} 
+
+body {
+  background: var(--dark);
+  font-family:'Cabin', Sans-Serif;
+  font-weight: 400;
+  line-height: 1.75;
+  color: #102a43;
+  width: 100%;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  
+}
+
+
+p {
+  margin-bottom: 1.5rem;
+  max-width: 40em;
+  color:#486581;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+  margin-bottom: 1.38rem;
+  font-family: 'Roboto Condensed', Sans-Serif;
+  font-weight: 400;
+  line-height: 1.3;
+  /* text-transform: capitalize; */
+  letter-spacing: 1px;
+}
+
+h1 {
+  margin-top: 0;
+  font-size: 3.052rem;
+}
+
+h2 {
+  font-size: 2.441rem;
+}
+
+h3 {
+  font-size: 1.953rem;
+}
+
+h4 {
+  font-size: 1.563rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+.light {
+  background-color: var(--light);
+}
+
+.dark {
+  background: var(--dark);
+}
+
+.btn {
+    cursor: pointer;
+    color: #fff;
+    background: var(--heading);
+    border: transparent;
+    border-radius: 0.25rem;
+    letter-spacing: 1px;
+    padding: 0.375rem 0.75rem;
+    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+      0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    transition: 0.3s ease-in-out all;
+    text-transform: capitalize;
+    display: inline-block;
+  }
+
+  .btn:hover {
+    background: #03befc;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+      0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  }
